--- a/.github/workflows/prod.yaml
+++ b/.github/workflows/prod.yaml
@@ -9,12 +9,12 @@ jobs:
   deploy:
     runs-on: ubuntu-22.04
     env:
-      SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
-      SUPABASE_DB_PASSWORD: ${{ secrets.PRODUCTION_DB_PASSWORD }}
-      PRODUCTION_PROJECT_ID: ${{ secrets.PRODUCTION_PROJECT_ID }}
+      # SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
+      # SUPABASE_DB_PASSWORD: ${{ secrets.PRODUCTION_DB_PASSWORD }}
+      # PRODUCTION_PROJECT_ID:
     steps:
       - uses: actions/checkout@v3
       - uses: supabase/setup-cli@v1
       - run: |
-          supabase link --project-ref $PRODUCTION_PROJECT_ID
+          supabase link --project-ref ${{ secrets.PRODUCTION_PROJECT_ID }}
           supabase db push
