--- a/.github/workflows/prod.yaml
+++ b/.github/workflows/prod.yaml
@@ -8,9 +8,13 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-22.04
+    env:
+      SUPABASE_ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+      SUPABASE_DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+      PROJECT_ID: ${{ secrets.PROOJECT_ID }}
     steps:
       - uses: actions/checkout@v3
       - uses: supabase/setup-cli@v1
       - run: |
-          supabase link --project-ref ${{ secrets.PRODUCTION_PROJECT_ID }}
+          supabase link --project-ref ${{ secrets.PROJECT_ID }}
           supabase db push
