--- a/.github/workflows/prod.yaml
+++ b/.github/workflows/prod.yaml
@@ -11,7 +11,7 @@ jobs:
     env:
       SUPABASE_ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
       SUPABASE_DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
-      PROJECT_ID: ${{ secrets.PROOJECT_ID }}
+      PROJECT_ID: ${{ secrets.PROJECT_ID }}
     steps:
       - uses: actions/checkout@v3
       - uses: supabase/setup-cli@v1
