--- a/.github/workflows/prod.yaml
+++ b/.github/workflows/prod.yaml
@@ -3,7 +3,6 @@ on:
   push:
     branches:
       - main
-  workflow_dispatch:
 
 jobs:
   deploy:
@@ -16,5 +15,5 @@ jobs:
       - uses: actions/checkout@v3
       - uses: supabase/setup-cli@v1
       - run: |
-          supabase link --project-ref ${{ secrets.PROJECT_ID }}
+          supabase link --project-ref $PROJECT_ID
           supabase db push
