--- a/.github/workflows/prod.yaml
+++ b/.github/workflows/prod.yaml
@@ -3,10 +3,11 @@ on:
   push:
     branches:
       - main
+workflow_dispatch:
 
 jobs:
   deploy:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     env:
       SUPABASE_ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
       SUPABASE_DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
