--- a/.github/workflows/prod.yaml
+++ b/.github/workflows/prod.yaml
@@ -1,9 +1,10 @@
-name: Deploy Supabase Migrations to 'Production' Project
+name: Deploy Supabase Migrations to Production
+
 on:
   push:
     branches:
       - main
-workflow_dispatch:
+  workflow_dispatch:
 
 jobs:
   deploy:
